more efficient use of lists